After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764569 - Increase wait time in test_watch_cancels
Increase wait time in test_watch_cancels
Status: RESOLVED FIXED
Product: gcr
Classification: Core
Component: General
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-04-04 01:47 UTC by Michael Biebl
Modified: 2019-02-22 11:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wait longer for dbus replies in test_watch_cancels (915 bytes, patch)
2016-04-04 01:47 UTC, Michael Biebl
none Details | Review

Description Michael Biebl 2016-04-04 01:47:02 UTC
Created attachment 325290 [details] [review]
wait longer for dbus replies in test_watch_cancels

As you can see at [1], the test suite failed on mipsel, which is a rather slow architecture, with the following message:

ERROR:gcr/test-system-prompt.c:736:test_watch_cancels: assertion failed (error == (g-io-error-quark, 19)): GDBus.Error:org.freedesktop.DBus.Error.NoReply: Message recipient disconnected from message bus without replying (g-dbus-error-quark, 4)
# ERROR:gcr/test-system-prompt.c:736:test_watch_cancels: assertion failed (error == (g-io-error-quark, 19)): GDBus.Error:org.freedesktop.DBus.Error.NoReply: Message recipient disconnected from message bus without replying (g-dbus-error-quark, 4)
not ok 18 /gcr/system-prompt/watch-cancels

Apparently the time we wait for a D-Bus reply (250ms) is too low. I increased that to 1s, and now it successfully passed on the machines I could test with.
Obviously 1s is rather arbitrary as well, but it seems safe to bump the timeout a little, to increase the chance for the test to succeed.



[1] https://buildd.debian.org/status/fetch.php?pkg=gcr&arch=mipsel&ver=3.20.0-1&stamp=1459728278