Wait longer for dbus replies in test_watch_cancels

Increase the time we wait for a reply from 250ms to 1s. Apparently 250ms
is too low for slow architectures like mipsel.

https://bugzilla.gnome.org/show_bug.cgi?id=764569